<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvBLDialogDeviceListPairedDeviceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_bl_dialog_list_title_margin"
        android:text="@string/activity_bl_dialog_title_paired_devices"
        android:visibility="gone" />

    <ListView
        android:id="@+id/lvBLDialogDeviceListPairedDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true" />

    <TextView
        android:id="@+id/tvBLDialogDeviceListNewDeviceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_bl_dialog_list_title_margin"
        android:text="@string/activity_bl_dialog_title_other_devices"
        android:visibility="gone" />

    <ListView
        android:id="@+id/lvBLDialogDeviceListNewDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:stackFromBottom="true" />

    <Button
        android:id="@+id/btnBLDialogDeviceListScan"
        android:layout_width="@dimen/activity_bl_dialog_btn_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_dialog_btn_margin"
        android:text="@string/activity_bl_dialog_title_btn_scan" />

</LinearLayout>