<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvDialogPathSaveFileListTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_dialog_list_title_margin"
        android:text="" />

    <ListView
        android:id="@+id/lvDialogSaveFileList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true" />

    <TextView
        android:id="@+id/tvDialogSaveFileInputNameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_dialog_inputname_title_margin"
        android:text="@string/activity_dialog_inputName_title" />

    <EditText
        android:id="@+id/edtDialogSaveFileInputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
            <Button
                android:id="@+id/btnDialogCancel"
                android:layout_width="@dimen/activity_dialog_btn_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_dialog_btn_margin"
                android:text="@string/activity_dialog_title_btn_cancel" />

            <Button
                android:id="@+id/btnDialogSave"
                android:layout_width="@dimen/activity_dialog_btn_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_dialog_btn_margin"
                android:text="@string/activity_dialog_title_btn_save" />
    </LinearLayout>


</LinearLayout>